feat(chat, message): create message in chat
